# SCT

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  sct
data/: file1.txt  file2.txt  file3.txt
src/: cli_parser.cpp  cli_parser.h  cpu_sim.cpp  cuda_sim.cu  cuda_sim.h  file_io.cpp  file_io.h  main.cpp  text_proc.cpp  text_proc.h  utils.cpp  utils.h  vectorizer.cpp  vectorizer.h
